--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@ Slate is designed for freelancers
     <input type="text" class="inputt" placeholder="Your Name">
     <input type="email" name="email" class="inputt" placeholder="Your Email">
     <input type="text" class="inputt1" placeholder="Your Message">
-    <button class="bott">Send</button>
+    <button class="bott">отправить</button>
     
     </div>
 
